--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Change to your own name
 site_name: Jeff Huang
 # Change to your own site
-site_url: https://steob92.github.io/mcgill-tutorial/ # must have the trailing slash
+site_url: https://j-huang05.github.io/mcgill-tutorial/ # must have the trailing slash
 site_author: Jeff Huang (jeff.huang@mail.mcgill.ca)
 site_description: Research site for Your Name 
 copyright: > # should remain a link to the original theme
