--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ extra_javascript:
 nav:
   - Home: index.md
   - About Me: about/index.md
-  - Research: reasearch/index.md
+  - Research: research/index.md
   # - Projects: projects/index.md
 
 # Extensions that we want to use
